--- a/packages/components/dropdown/dropdown.scss
+++ b/packages/components/dropdown/dropdown.scss
@@ -3,8 +3,8 @@
 
 .kbq-dropdown-trigger {
     &.kbq-button {
-        padding-left: calc(10px - var(--kbq-size-border-width));
-        padding-right: calc(10px - var(--kbq-size-border-width));
+        padding-left: calc(var(--kbq-dropdown-trigger-horizontal-padding, 10px) - var(--kbq-size-border-width));
+        padding-right: calc(var(--kbq-dropdown-trigger-horizontal-padding, 10px) - var(--kbq-size-border-width));
 
         & .kbq-icon_left {
             margin-right: var(--kbq-size-xs);
